--- a/VexScorer/VSScoringView.xib
+++ b/VexScorer/VSScoringView.xib
@@ -11,6 +11,7 @@
                 <outlet property="blueCornerScoreLabel" destination="LTX-WC-XcO" id="G49-xE-Ybs"/>
                 <outlet property="blueFinaleScoreLabel" destination="W3W-hA-DGO" id="TvY-4c-6v3"/>
                 <outlet property="blueGoalScoreLabel" destination="l2g-U3-4z4" id="SwN-gq-SC1"/>
+                <outlet property="blueScoreLabel" destination="spD-Pp-7OU" id="ygX-Yy-r2f"/>
                 <outlet property="controlsView" destination="nfS-Bl-zgD" id="R3a-ow-D6T"/>
                 <outlet property="matchLabel" destination="CLG-0k-67T" id="9yJ-29-xo6"/>
                 <outlet property="modeButton" destination="Odn-9o-kSF" id="ghg-5G-Z0F"/>
@@ -19,6 +20,8 @@
                 <outlet property="redCornerScoreLabel" destination="2uT-6b-DTT" id="Jkk-2d-MKS"/>
                 <outlet property="redFinaleScoreLabel" destination="gZW-la-peV" id="RGk-Mw-aYM"/>
                 <outlet property="redGoalScoreLabel" destination="NYl-c9-hcE" id="o1g-VG-Wgb"/>
+                <outlet property="redScoreLabel" destination="8Zw-4b-6zk" id="BJU-3w-jAy"/>
+                <outlet property="scoreView" destination="Nm8-Fb-eH0" id="yQz-mT-reH"/>
                 <outlet property="teleopView" destination="deN-rg-8f3" id="S4P-7M-lD9"/>
                 <outlet property="view" destination="1" id="LTb-Mf-FNi"/>
             </connections>
@@ -88,7 +91,7 @@
                             <color key="backgroundColor" white="1" alpha="0.70000000000000007" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Odn-9o-kSF">
-                            <rect key="frame" x="391" y="493" width="242" height="81"/>
+                            <rect key="frame" x="193" y="493" width="638" height="81"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="50"/>
                             <state key="normal" title="Finished">
@@ -441,6 +444,61 @@
                     <color key="backgroundColor" red="0.99215692280000001" green="0.0" blue="0.066666670139999995" alpha="0.69999999999999996" colorSpace="deviceRGB"/>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2cp-jw-2xt" userLabel="Not Usable">
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="120"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <color key="backgroundColor" white="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+        </view>
+        <view contentMode="scaleToFill" id="Nm8-Fb-eH0" userLabel="Score">
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="488"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BZ5-Bq-isV">
+                    <rect key="frame" x="512" y="0.0" width="512" height="488"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <subviews>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMV-3Z-9H1">
+                            <rect key="frame" x="123" y="217" width="266" height="53"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="37"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spD-Pp-7OU">
+                            <rect key="frame" x="123" y="278" width="266" height="53"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="37"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
+                </view>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wJv-F7-uHY">
+                    <rect key="frame" x="0.0" y="0.0" width="512" height="488"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <subviews>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ykc-tV-5tX">
+                            <rect key="frame" x="112" y="217" width="266" height="53"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="37"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zw-4b-6zk">
+                            <rect key="frame" x="112" y="278" width="266" height="53"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="37"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.99215692280000001" green="0.0" blue="0.066666670139999995" alpha="0.69999999999999996" colorSpace="deviceRGB"/>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="awB-Rm-86g" userLabel="Not Usable">
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="120"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="calibratedWhite"/>
